// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches shallow shapshot 1`] = `
<Bucket
  bucket={
    Object {
      "filter": Object {
        "status": "ac",
      },
      "sorts": Array [
        "current-phase",
      ],
    }
  }
  challenges={
    Array [
      Object {
        "id": "1",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "b",
        "totalPrize": 1800,
      },
      Object {
        "allPhases": Array [
          Object {
            "phaseStatus": "Open",
            "phaseType": "Registration",
          },
        ],
        "currentPhases": Array [
          "Registration",
        ],
        "events": Array [
          Object {
            "eventName": "Submit",
          },
        ],
        "id": "2",
        "isDataScience": false,
        "prize": Array [
          1200,
          600,
        ],
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "subTrack": "CODE",
        "technologies": "a, b, c",
        "totalPrize": 1800,
        "track": "DEVELOP",
      },
    ]
  }
  communityName={null}
  expand={[Function]}
  expanded={true}
  loadMore={[Function]}
  loading={false}
  openChallengesInNewTabs={false}
  setFilterState={[Function]}
  setSort={[Function]}
  sort=""
/>
`;

exports[`Matches shallow shapshot 2`] = `
<Bucket
  bucket={
    Object {
      "filter": Object {
        "status": "ac",
      },
      "sorts": Array [
        "current-phase",
      ],
    }
  }
  challenges={
    Array [
      Object {
        "id": "1",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "b",
        "totalPrize": 1800,
      },
      Object {
        "id": "2",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "3",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "4",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "5",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "6",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "7",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "8",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "9",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "10",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
      Object {
        "id": "11",
        "prizes": Array [
          1200,
          600,
        ],
        "status": "a",
        "totalPrize": 1800,
      },
    ]
  }
  communityName={null}
  expand={[Function]}
  expanded={false}
  loadMore={[Function]}
  loading={true}
  openChallengesInNewTabs={false}
  setFilterState={[Function]}
  setSort={[Function]}
  sort=""
/>
`;

exports[`Matches shallow shapshot 3`] = `
<Bucket
  bucket={
    Object {
      "filter": Object {
        "status": "e",
      },
      "sorts": Array [
        "current-phase",
      ],
    }
  }
  challenges={Array []}
  communityName={null}
  expand={[Function]}
  expanded={false}
  loadMore={null}
  loading={true}
  openChallengesInNewTabs={false}
  setFilterState={[Function]}
  setSort={[Function]}
  sort=""
/>
`;
